[package]
name = "pumpk"
version = "0.1.0"
authors = ["Todd Stellanova <tstellanova@users.noreply.github.com>"]
edition = "2018"


[dependencies]
freertos-rust = "*"
cty = "0.2.1"
cortex-m = "^0.6.0"
cortex-m-rt = "0.6.11"
panic-rtt-core = "0.1.1"
embedded-hal = "0.2.3"
# Cortex-M family specialization:
stm32f3 = {version = "0.10.0", features = ["stm32f303"] }
stm32f3xx-hal =  {version = "0.4.3", features = ["stm32f303", "rt"] }
stm32f303cct6-robotdyn-bsp = "0.1.0"

[build-dependencies]
freertos-cargo-build = "*"